added paragraph on cooccur

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -224,7 +224,7 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
 
     \subsection{Case study results}
 
-    We first applied this joint model to simulated data to verify that the original interaction parameters could be recovered by this framework. We then applied this model to a case study dataset of a diverse annual wildflower community, where elements consisted of 22 focal species and up to 52 neighbouring species (including focal species) and performance was measure by seed production. We conducted a posterior predictive check comparing simulated performance data to observed values (Figure \ref{fig:ppcheck}), this is especially important for verifying that the appropriate distribution and link function is being used for the data at hand. The model returned estimates for all 1144 interactions between those 22 focal species and 52 neighbouring species, of which 60\% were observed (realised).  When accounting for focal species only, 86.4\% of interactions were observed and estimated by the NDDM. NDDM and RIM estimates matched well and followed similar distributions (S.I. Figure \ref{fig:adist}) as enforced by the framework. 
+    We first applied this joint model to simulated data to verify that the original interaction parameters could be recovered by this framework. We then applied this model to a case study dataset of a diverse annual wildflower community, where elements consisted of 22 focal species and up to 52 neighbouring species (including focal species) and performance was measured as viable seed production. We conducted a posterior predictive check comparing simulated performance data to observed values (Figure \ref{fig:ppcheck}), this is especially important for verifying that the appropriate distribution and link function is being used for the data at hand. The model returned estimates for all 1144 interactions between those 22 focal species and 52 neighbouring species, of which 60\% were observed (realised).  When accounting for focal species only, 86.4\% of interactions were observed and estimated by the NDDM. NDDM and RIM estimates matched well and followed similar distributions (S.I. Figure \ref{fig:adist}) as enforced by the framework. 
     
 
 
@@ -264,10 +264,11 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
 
     \paragraph{}
      For our case study, the resulting interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values (Figure \ref{fig:netwks}.A \& B). Though competition was the dominant interaction type,  35\% of all focal x neighbour interactions were facilitative, as were 26 \% of all focal x focal interactions (averages across all network samples). As a result, 40\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. [GIVE THE MEDIAN INSTEAD OF MEAN!]
-     Furthermore, the elements of the diagonal (the effect of an element on itself) were able to be estimated, which can allow us to quantify how much a species regulates it's own performance. For 12 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species [ADD proportion of intra interactions that had a facil vs comp median]. Together, these features make the resulting interaction matrix qualitatively different to association networks, which are a common alternative to inferring interactions in diverse systems (Figure \ref{fig:netwks}.C). 
+     Furthermore, the elements of the diagonal (the effect of an element on itself) were able to be estimated, which can allow us to quantify how much a species regulates it's own performance. For 12 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species [ADD proportion of intra interactions that had a facil vs comp median]. 
+
 
      \paragraph{}
-
+     We applied the same data to the cooccur package in R \parencite{Griffith2016} to build a spatial-association network, a common alternative to inferring interactions in diverse systems. Species associations (Figure \ref{fig:netwks}.C) were all negative (competitive), symmetrical, and the association between a species and itself (the equivalent to intraspecific interactions) cannot be estimated. Together, these aspects make species association networks qualitatively different to the interaction networks returned by our framework. 
 
 
        \begin{figure}[H]
@@ -285,7 +286,10 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
     \subsection{Examples of ecological applications}
 
     \paragraph{}
-    We now illustrate potential uses of this framework by examining ecological questions important to species management and how the interaction matrix derived from our case study data may help us better understand the system in question. 
+    Each of the questions makes use of one of the key features of our framework: intraspecific interactions, non-symmetrical interactions, and the ability to estimate positive and negative interactions. 
+
+
+    We now illustrate potential uses of this framework by examining ecological questions important to species management and how the interaction matrix derived from our case study data may help us better understand the system in question. We use three ecological questions which 
     We use three ecological questions to illustrate some of the ways in which our results may be useful to empirical and applied ecologists.
  
     \subsubsection*{Do abundant natives under-regulate their population density compared to rarer native species?}
@@ -331,10 +335,10 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
 
 
     \paragraph{} 
-    Our novel framework quantifies the effects of interacting elements and reciprocal performance, allowing the estimation of diverse, horizontal interaction matrices. The resulting matrices are non-symmetrical and can contain both positive and negative interactions, as well as the effect of one element on itself. This framework is flexible to metrics of performance, element identity (groups) and diversity. We also propose a way to estimate un-observed interactions from those which are observed. The matrices generated through this framework can be transformed into interaction networks through the use of further models describing the system's interaction dynamics. These features make it particularly useful in an ecological context, as illustrated in our case study on a diverse wildflower community, as well as flexible for use with data from the wide range of complex systems dominated by horizontal interactions.
+    Our novel framework quantifies the effects of interacting elements and reciprocal performance, allowing the estimation of diverse, horizontal interaction matrices. The resulting matrices are non-symmetrical and can contain both positive and negative interactions, as well as the effect of one element on itself. This framework is flexible to metrics of performance, element identity (groups) and diversity. We also propose a way to estimate unrealised interactions from those which are realised. The matrices generated through this framework can be transformed into interaction networks through the use of further models describing the system's interaction dynamics. These features make it particularly useful in an ecological context, as illustrated in our case study on a diverse wildflower community, as well as flexible for use with data from the wide range of complex systems dominated by horizontal interactions.
 
     \paragraph{}
-    Here, we illustrate the unique useful features of this framework using a typical plant-dominated ecological system for context. In our case study, we show how wildflower species are linked through  plant-plant interaction networks. In turn, this network can help us identify what roles specific species play within a community, and explore how the mechanisms maintaining diversity and stability operate in these systems. By estimating the effects of species on each other's performance, and subsequently their population growth and patterns of abundance, our method stands in contrast to association networks. There are a wide range of association network frameworks used in ecology \parencite{} and collectively, they are a common alternative to estimating interaction networks in high-diversity systems as they capture spatial associations between species (e.g. \cite{Saiz2011}) and require easier-to-obtain data. Association networks also benefit from easy implementation with a wide range of packages in R (e.g. \cite{Griffith2016}) though the resulting networks are typically symmetrical and cannot capture a species' effect on itself. Moreover, association networks remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
+    Here, we illustrate the unique useful features of this framework using a typical plant-dominated ecological system for context. In our case study, we show how wildflower species are linked through  plant-plant interaction networks. In turn, this network can help us identify what roles specific species play within a community, and explore how the mechanisms maintaining diversity and stability operate in these systems. By estimating the effects of species on each other's performance, and subsequently their population growth and patterns of abundance, our method stands in contrast to association networks and returns ... qualitatively different?. There are a wide range of association network frameworks used in ecology \parencite{} and collectively, they are a common alternative to estimating interaction networks in high-diversity systems as they capture spatial associations between species (e.g. \cite{Saiz2011}) and require easier-to-obtain data. Association networks also benefit from easy implementation with a wide range of packages in R (e.g. \cite{Griffith2016}) though the resulting networks are typically symmetrical and cannot capture a species' effect on itself. Moreover, association networks remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
 
     \paragraph{}
     Species interaction networks have a wide range of practical applications, such as evaluating ecosystem response to human-altered landscapes, guiding future management decisions \parencite{Ross2011} or exploring how communities may respond to global warming \parencite{Gorman2019}. Conservation and ecosystem management efforts aimed at regulating species abundances can, for example, use the information provided by an interaction network to prioritise which species to conserve or eradicate based on their role in the community. Such roles can be deduced by a species' position in the interaction network \parencite{Cirtwill2018a} and as illustrated in our case study. Identifying keystone, foundation and other important types of species roles is also helpful for understanding biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019}. The examples we describe in our case study are not exhaustive, but serve to illustrate how interaction networks can help us understand both community dynamics overall and the effects \& response of specific species towards the community. 
