added coocurvsabund figure

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -327,6 +327,15 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
 	\end{figure}
 
 
+    \begin{figure}[H]
+        \begin{centering}
+        \includegraphics[width=0.4\textwidth]{../2.analyses/figures_mss/cooccur_vs_abund.png}
+        \caption{}
+        \label{fig:coocab}
+        \end{centering}
+    \end{figure} 
+
+
 \section{Discussion}
     
 % word count aim: 500-1000
