--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -400,9 +400,17 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
 
     \subsection{STAN model code}
     \label{SI:modelcode}
-    The following code specifies the joint model framework used to estimate the interaction matrix described in the Methods. It can be copied into a text editor and saved with a .stan extension for use with STAN. 
+    The following code specifies the joint model framework used to estimate the interaction matrix described in the Methods. It can be copied into a text editor and saved with a .stan extension for use with STAN. \\
+
+    This code is also available in the Supplementary Methods zip folder under the name 'joint_model.stan', alongside the R scripts and functions used to prepare the data and call upon STAN to run the model. \\
+
+    We make the two following observations in addition to the comments in the code.
+    Realised interactions (beta_ij), which are defined as a vector,  must be matched to their correct position in the interaction matrix. This is the role of the istart, iend, icol, and irow vectors defined in the data block. The Supplementary Methods zip folder also contains the data_prep.R file, which will show how to calculate these vectors from the input data. 
+    We define the effect parameters as a unit vector, which means we only require S-1 degrees of freedom to estimate all effect values. The response parameter ...
 
     [Add explanation on indexing system and parameterisation tricks]
+
+
 
 
     \includepdf[pages=-]{../../2018_Compnet/stormland/model_stan.pdf}
