--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -293,8 +293,8 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
     We use three ecological questions to illustrate some of the ways in which our results may be useful to empirical and applied ecologists.
  
     \subsubsection*{Do abundant natives under-regulate their population density compared to rarer native species?}
-    One hypothesis as to why certain plant species are more abundant than others is that they tend to compete with themselves less strongly than rare species \parencite{Yenni2012, Yenni2017}. Hypothetically, this release from intraspecific competition pressure allows them to reach much higher abundances than species which strongly compete with themselves. We can verify this hypothesis in our case study by plotting the effect of a species on itself (the diagonal of the interaction matrix, or intraspecific interactions) against it's abundance as in Figure \ref{fig:species}.A. Intraspecific interactions are at their weakest when close to $0$. The two most abundant native species \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) highlighted in purple fall very close to the median intraspecific interaction strength. This suggests that \textit{V. rosea} and \textit{P. canescens} do not reach high abundances through an under-regulation of their population density but through other means (e.g. access to a larger niche space). 
-    [ADD You could note that no comparison with standard approaches is possible because existing methods don't allow for calculation of self regulation.  You send it before but maybe drive that novelty home. ] 
+    One hypothesis as to why certain plant species are more abundant than others is that they tend to compete with themselves less strongly than rare species \parencite{Yenni2012, Yenni2017}. Hypothetically, this release from intraspecific competition pressure allows them to reach much higher abundances than species which strongly compete with themselves. In our case study, we can explore this hypothesis by plotting the effect of a species on itself (the diagonal of the interaction matrix, or intraspecific interactions) against it's abundance as in Figure \ref{fig:species}.A. Intraspecific interactions are at their weakest when close to $0$. The two most abundant native species \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) highlighted in purple fall very close to the median intraspecific interaction strength. This suggests that \textit{V. rosea} and \textit{P. canescens} do not reach high abundances through an under-regulation of their population density but through other means (e.g. access to a larger niche space). As noted previously, the diagonal of the matrix is not available in association methods like cooccur..
+    %[ADD You could note that no comparison with standard approaches is possible because existing methods don't allow for calculation of self regulation.  You send it before but maybe drive that novelty home. ] 
 
     \subsubsection*{Which species may be taking on keystone roles in the system?}
     Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species is disproportionately large relative to their abundance \parencite{Power1996, Piraino2002, Libralato2006}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation \parencite{}, we can identify potential candidates by comparing a species' impact on the population growth of other species to it's own abundance \parencite{Libralato2006}. [Here we benefit from asymmetrical interactions as ....] Figure \ref{fig:species}.B highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). 
@@ -402,10 +402,10 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
     \label{SI:modelcode}
     The following code specifies the joint model framework used to estimate the interaction matrix described in the Methods. It can be copied into a text editor and saved with a .stan extension for use with STAN. \\
 
-    This code is also available in the Supplementary Methods zip folder under the name 'joint_model.stan', alongside the R scripts and functions used to prepare the data and call upon STAN to run the model. \\
+    This code is also available in the Supplementary Methods zip folder under the name 'joint\_model.stan', alongside the R scripts and functions used to prepare the data and call upon STAN to run the model. \\
 
     We make the two following observations in addition to the comments in the code.
-    Realised interactions (beta_ij), which are defined as a vector,  must be matched to their correct position in the interaction matrix. This is the role of the istart, iend, icol, and irow vectors defined in the data block. The Supplementary Methods zip folder also contains the data_prep.R file, which will show how to calculate these vectors from the input data. 
+    Realised interactions (beta\_ij), which are defined as a vector,  must be matched to their correct position in the interaction matrix. This is the role of the istart, iend, icol, and irow vectors defined in the data block. The Supplementary Methods zip folder also contains the data_prep.R file, which will show how to calculate these vectors from the input data. 
     We define the effect parameters as a unit vector, which means we only require S-1 degrees of freedom to estimate all effect values. The response parameter ...
 
     [Add explanation on indexing system and parameterisation tricks]
